src/test/ui/issues/issue-48364.rs
fn foo() -> bool {
    b"".starts_with(stringify!(foo))
    //~^ ERROR arguments to this function are incorrect
}

fn main() {}
